--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="div-central">
                 <p>
-                    Insira os valores da equação (ax² + bx² + c = 0) nos formulários abaixo:
+                    Insira os valores da equação (ax² + bx + c = 0) nos formulários abaixo:
                 </p>
 
                 <form action="index.html">
